--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>card</title>
-    <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>animcard</title>
 </head>
 
 <body>
-    <div class="card">
-        <div class="content">
-            <span class="num">01</span>
-            <h2 class="title">AhanOnline</h2>
-            <p class="text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at quibusdam nam nihil modi, laborum
-                quo
-                in quos, provident, quam eaque recusandae facere. Quaerat fuga saepe ullam accusamus ex libero.
-            </p>
-            <button class="button">Read more</button>
+    <div class="container">
+        <div class="card">
+            <div class="content">
+                <span class="num">01</span>
+                <h2 class="title">AhanOnline</h2>
+                <p class="text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis at quibusdam nam nihil modi,
+                    laborum
+                    quo
+                    in quos, provident, quam eaque recusandae facere. Quaerat fuga saepe ullam accusamus ex libero.
+                </p>
+                <button class="button">Read more</button>
+            </div>
+            <div class="card_first"></div>
+            <div class="card_second"></div>
         </div>
     </div>
 </body>
